<resources>
    <string name="app_name">ФизПомощник</string>
    <string name="man">Мужчина</string>
    <string name="woman">Женщина</string>
    <string name="mans">Мужчины</string>
    <string name="womans">Женщины</string>
    <string name="title_activity_set_exercise">SetExerciseActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="age">Возраст</string>
    <string name="strength">Сила:</string>
    <string name="stamina">Выносливость:</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="count_exp">Количество упражнений</string>
    <string name="weight">Вес</string>
    <string name="count">Количество</string>
    <string name="m_sec">мСек</string>
    <string name="sec">сек</string>
    <string name="min">мин</string>
    <string name="speed">Скорость:</string>
    <string name="metr">Метров</string>
    <string name="smetr">Сантиметров</string>
    <string name="WS">Военно-прикладные навыки:</string>
    <string name="mmetr">Милиметров</string>
    <string name="agility">Ловкость:</string>
    <string name="mark">Оценка:</string>
    <string name="itog">Рассчитать</string>
    <string name="exercises">Упражнение</string>
    <string name="results">Результат:</string>
    <string name="marks">баллов</string>
    <string name="your_results">Ваш результат</string>
    <string name="_400">400</string>
    <string name="mark_normal">Оценка "Удовлетворительно"</string>
    <string name="mark_good">Оценка "Хорошо"</string>
    <string name="mark_perfect">Оценка "Отлично"</string>
    <string name="level_3">3 уровень</string>
    <string name="level_2">2 уровень</string>
    <string name="level_1">1 уровень</string>
    <string name="max_level">Высший уровень</string>
    <string name="your_mark">Ваша оценка</string>
    <string name="close">Закрыть</string>
    <string name="take_categories">Выберите Вашу категорию</string>
    <string name="_0">0</string>
    <string name="_100">100</string>
    <string name="count_points">Колличество баллов</string>
    <string name="lvl_mark">Уровень (Оценка)</string>
    <string name="hello">Добро пожаловать </string>
    <string name="description_hello">Ваш личный помощник "\n" по физической подготовке</string>
    <string name="your_name">Ваше имя</string>
    <string name="continue_btn">Продолжить</string>

    <string-array name="spinner_categories">
        <item>1 категория</item>
        <item>2 категория</item>
        <item>3 категория</item>
    </string-array>
    <string-array name="spinner_cadet">
        <item>1-ый курс</item>
        <item>2-ой курс</item>
        <item>3-ий курс и старше</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_nfp">НФП</string>
    <string name="menu_calculator">Калькулятор баллов</string>
    <string name="menu_calculator_somebody">КБ для нового пользователя</string>
    <string name="menu_history">История</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_method">Методика</string>
    <string name="menu_money">Пожертвуй проекту</string>
    <string name="menu_settings">Настройки профиля</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="_sex">Ваш пол</string>
    <string name="your_age">Ваш возраст</string>
    <string name="your_sex">Ваш пол</string>
    <string name="your_weight">Ваш вес</string>
    <string name="contract">Служба</string>
    <string name="cadet">Курсант</string>
    <string name="on_contract">По контракту</string>
    <string name="user">Пользователь: </string>
    <string name="change_user">Сменить пользователя</string>
    <string name="best_result">Лучший результат</string>
    <string name="last_result">Последний результат</string>
    <string name="calc_points">Расчет баллов</string>
    <string name="calc_points_friends">Расчет баллов "\n" другу</string>
    <string name="history">История</string>
    <string name="method">Методика</string>
    <string name="calendar">Календарь</string>
    <string name="free_money">Помоги проекту - посмотри рекламу!</string>
    <string name="settings">Настройки</string>
    <string name="settings_menu">Настройки</string>
    <string name="take_course">Выберите Ваш курс</string>
    <string name="hello_to_calc">Здравствуй, </string>
    <string name="name_exerc">Название упражнения:</string>
    <string name="points">Баллы</string>
    <string name="clean_btn">Очистить</string>
    <string name="next_exam">Следующая сдача</string>
    <string name="saveDate">Сохранить</string>
    <string name="banner_ads">ca-app-pub-8318454125734381/4340879467</string>

    <string name="cat_one_title">Категория № 1: </string>
    <string name="cat_one_desc">Военнослужащие подразделений специального
        назначения, разведывательных, воздушно-десантных, десантно-штурмовых и морской пехоты;
    </string>

    <string name="cat_two_title">Категория № 2: </string>
    <string name="cat_two_desc">Личный состав основных подразделений и подразделений боевого обеспечения (кроме указанных в категории N 1)
        воинских частей видов (родов войск) Вооруженных Сил, управления соединений, воинских частей; слушатели и курсанты вузов;</string>

    <string name="cat_three_title">Категория № 3: </string>
    <string name="cat_three_desc">Военнослужащие подразделений материального, технического и медицинского обеспечения, ремонта и обслуживания,
        соединений (бригад) надводных кораблей и подводных лодок, военных оркестров, переменный состав учебных воинских частей (военнослужащие по контракту - курсанты).
        Военнослужащие, проходящие военную службу в органах военного управления (от управления объединения и выше), в организациях Вооруженных Сил.</string>
    <string name="promo">ЗДЕСЬ ДОЛЖНА БЫТЬ РЕКЛАМА</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feed">Новости</string>
    <string name="music">Плеер</string>
    <string name="search">Поиск</string>
    <string name="sport">Спорт</string>
    <string name="show">show</string>
    <string name="date">Дата рождения</string>
    <string name="change_date">Сменить</string>
</resources>
