<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@drawable/ic_rss_feed_black_24dp"
        android:title="@string/feed"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_nfp"
        android:enabled="true"
        android:icon="@drawable/ic_view_compact_black_24dp"
        android:title="@string/menu_nfp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_history"
        android:enabled="true"
        android:icon="@drawable/ic_history_24dp"
        android:title="@string/history"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
</menu>