<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitleResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/your_results"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewResultsPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/your_mark"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewYourMark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleResults" />

        <TextView
            android:id="@+id/textViewYourMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleMaxLvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/max_level" />

        <TextView
            android:id="@+id/textViewMarkMaxLvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400" />

        <TextView
            android:id="@+id/textViewTitle1Lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/level_1" />

        <TextView
            android:id="@+id/textViewMark1Lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400" />

        <TextView
            android:id="@+id/textViewTitle2Lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/level_2" />

        <TextView
            android:id="@+id/textViewMark2Lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400" />

        <TextView
            android:id="@+id/textViewTitle3Lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/level_3" />

        <TextView
            android:id="@+id/textViewMark3Lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400" />

        <TextView
            android:id="@+id/textViewTitle5Mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/mark_perfect" />

        <TextView
            android:id="@+id/textViewMark5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400" />

        <TextView
            android:id="@+id/textViewTitle4Mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/mark_good" />

        <TextView
            android:id="@+id/textViewMark4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400" />

        <TextView
            android:id="@+id/textViewTitleMark3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/mark_normal" />

        <TextView
            android:id="@+id/textViewMark3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_margin="4dp"
            android:text="@string/_400" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCloseDialog"
            android:layout_columnSpan="2"
            android:layout_margin="4dp"
            android:layout_gravity="fill_horizontal"
            android:text="@string/close" />


    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>